Fix tag-wrapping
* blog/compass/sass/partials/_base.scss (su-tagify): 'inline-block' is
  the correct display-type to use.

--- a/blog/compass/sass/partials/_base.scss
+++ b/blog/compass/sass/partials/_base.scss
@@ -52,6 +52,7 @@ $su-imported-once-files: () !default;
    background-color: #e5e5e5;
    border: 1px solid #bcbcbc;
    border-radius: 0.4em;
+   display: inline-block;
    padding-left: 0.2em;
    padding-right: 0.2em;
 }
